<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_day"
        android:textColor="@color/primaryColor"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/monday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/tuesday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/wednesday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/thursday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/friday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/saturday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/sunday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday_single"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="12dp">
            <Spinner
                android:id="@+id/create_time_block_start_time_hour_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"/>
            <Spinner
                android:id="@+id/create_time_block_start_time_minute_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/time_block_start_time_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="12dp">
            <RadioButton
                android:id="@+id/create_time_block_start_time_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AM" />

            <RadioButton
                android:id="@+id/create_time_block_start_time_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PM"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="12dp">
            <Spinner
                android:id="@+id/create_time_block_end_time_hour_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"/>
            <Spinner
                android:id="@+id/create_time_block_end_time_minute_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/time_block_end_time_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="12dp">
            <RadioButton
                android:id="@+id/create_time_block_end_time_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AM" />

            <RadioButton
                android:id="@+id/create_time_block_end_time_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PM"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>